fix: icon-buttons in table are too large

--- a/src/components/ButtonMenu/ButtonMenu.module.css
+++ b/src/components/ButtonMenu/ButtonMenu.module.css
@@ -4,6 +4,7 @@
   top: anchor(bottom);
   right: anchor(right);
   padding: 0;
+  padding-block: 0.5rem;
 }
 .popover ul {
   list-style: none;
