--- a/src/pages/Place/DrinkDialog.module.css
+++ b/src/pages/Place/DrinkDialog.module.css
@@ -1,5 +1,5 @@
 .root > :global(.dialogWindow) {
-  --dialog-padding-inline: 3rem;
+  --dialog-padding-inline: clamp(1rem, 4vw, 3rem);
   inline-size: 60ch;
 }
 .root:modal {
